--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string-array name="room">
+    <string-array name="room_appliance">
         <item>Select a Room</item>
         <item>Kitchen</item>
         <item>Bathroom</item>
@@ -38,6 +38,25 @@
         <item>Bed</item>
         <item>Night Stand</item>
         <item>Table</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="room_electrical">
+        <item>Select a Room</item>
+        <item>Kitchen</item>
+        <item>Bathroom</item>
+        <item>Bedroom</item>
+        <item>Garage</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="area_electrical">
+        <item>Please specify area that needs servicing</item>
+        <item>Outlets (110 V)</item>
+        <item>Lighting</item>
+        <item>Dryer Plug (220 V)</item>
+        <item>Breaker</item>
+        <item>Switch</item>
         <item>Other</item>
     </string-array>
 
