--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,40 @@
         <item>Other</item>
     </string-array>
 
+    <string-array name="subject_tutoring">
+        <item>Please specify what needs to be tutored</item>
+        <item>Math</item>
+        <item>Reading/Writing</item>
+        <item>Science</item>
+        <item>History</item>
+        <item>Other</item>
+    </string-array>
+
+    <string-array name="Grade">
+        <item>Please specify grade</item>
+        <item>Kindergarten</item>
+        <item>1st</item>
+        <item>2nd</item>
+        <item>3rd</item>
+        <item>4th</item>
+        <item>5th</item>
+        <item>6th</item>
+        <item>7th</item>
+        <item>8th</item>
+        <item>9th</item>
+        <item>10th</item>
+        <item>11th</item>
+        <item>12th</item>
+    </string-array>
+
+    <string-array name="trailer_size_packing_moving">
+        <item>Please specify trailer size</item>
+        <item>Small</item>
+        <item>Medium</item>
+        <item>Large</item>
+        <item>Extra Large</item>
+    </string-array>
+
 
     <string-array name="states">
         <item>AL</item>
