--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,9 @@
     </string-array>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="Pay">pay</string>
+
+
     <!-- Preference Titles -->
 
     <!-- Messages Preferences -->
