--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,17 @@
         <item>Roaches</item>
     </string-array>
 
+    <string-array name="categories">
+        <item>Appliance</item>
+        <item>Electrical</item>
+        <item>Plumbing</item>
+        <item>Home Cleaning</item>
+        <item>Tutoring</item>
+        <item>Packaging</item>
+        <item>Computer Repair</item>
+        <item>Home Repair</item>
+        <item>Pest Control</item>
+    </string-array>
 
     <string-array name="states">
         <item>AL</item>
